# wake_me_up

./: Cargo.toml
app/: Cargo.toml  index.html
app/src/: app.rs  devices.rs  home.rs  main.rs
app/src-tauri/: .env  Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: base.json
app/src-tauri/src/: error.rs  lib.rs  main.rs
app/src-tauri/src/client/: auth.rs
app/src-tauri/src/client/data/: client.rs
app/src-tauri/src/commands/: auth.rs  device.rs  mod.rs
app/src-tauri/src/model/: auth.rs  controller.rs  device.rs  mod.rs
client/: .env  Cargo.toml  build.rs
client/src/: headers.rs  lib.rs  login.rs  main.rs  websocket.rs
protos/: add_device_request.proto  basic_response.proto  device.proto  login_request.proto  login_response.proto  logout_response.proto  user.proto  wake_up.proto
server/: .env  Cargo.toml  build.rs  docker-compose.yaml
server/src/: ctx.rs  error.rs  lib.rs  log.rs  main.rs  protobuf.rs
server/src/database/: auth.rs  device.rs  mod.rs
server/src/database/data/: client.rs  create_pool.rs  mod.rs  models.rs
server/src/migrations/: V1__user_table.sql  V2__device_table.sql  mod.rs
server/src/model/: auth.rs  controller.rs  device.rs  mod.rs  wake_up.rs
server/src/model/data/: models.rs
server/src/web/: mod.rs  mw_auth.rs  routes_auth.rs  routes_client.rs  routes_device.rs  routes_wake_up.rs
