[workspace]
members = ["client", "server"]
resolver = "2"

[workspace.package]

[workspace.metadata]

[workspace.dependencies]
argon2 = "0.5.3"
axum = "0.7.5"
barrel = "0.7.0"
base64 = "0.22.0"
bigdecimal = "0.4.3"
bytes = "1.6.0"
dotenv = "0.15.0"
futures-util = "0.3.30"
futures-channel = "0.3.30"
protobuf-src = "1.1.0"
reqwest = "0.12.4"
serde = "1.0.198"
thiserror = "1.0.59"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = "1.37.0"
tokio-tungstenite = "0.21.0"
rand = "0.8.5"
refinery = "0.8.14"
strum = "0.26.2"
strum_macros = "0.26.2"
serde_with = "3.7.0"
sqlx = "0.7"
tower-http = "0.5.2"
chrono = "0.4.38"
lazy-regex = "3.1.0"
tower-cookies = "0.10.0"
uuid = "1.8.0"
serde_json = "1.0.116"
axum-extra = "0.9.3"
wake-on-lan = "0.2.0"
postgres = "0.19.7"
url = "2.5.0"

prost = "0.12.4"
prost-build = "0.12.4"
